k8s/polybot/polybot-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: polybot-ingress
  namespace: polybot
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: bene-polybot.devops-int-college.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: polybot
                port:
                  number: 80
